# vdjmatch2

./: CMakeLists.txt  README.md  pyproject.toml
data/matrices_epitope/TRA/: matrix_AVFDRKSDAK.csv  matrix_ELAGIGILTV.csv  matrix_FLRGRAYGL.csv  matrix_FRDYVDRFYKTLRAEQASQE.csv  matrix_GILGFVFTL.csv  matrix_GLCTLVAML.csv  matrix_KLGGALQAK.csv  matrix_LLAGIGTVPI.csv  matrix_LLLGIGILV.csv  matrix_LLWNGPMAV.csv  matrix_NEGVKAAW.csv  matrix_NLVPMVATV.csv  matrix_RAKFKQLL.csv  matrix_TFEYVSQPFLMDLE.csv  matrix_TTDPSFLGRY.csv  matrix_YLQPRTFLL.csv  matrix_YVLDHLIVV.csv
data/matrices_epitope/TRB/: matrix_ATDALMTGY.csv  matrix_CTELKLSDY.csv  matrix_ELAGIGILTV.csv  matrix_FLYALALLL.csv  matrix_FRDYVDRFYKTLRAEQASQE.csv  matrix_GILGFVFTL.csv  matrix_GLCTLVAML.csv  matrix_GTSGSPIVNR.csv  matrix_KAFSPEVIPMF.csv  matrix_KLGGALQAK.csv  matrix_KRWIILGLNK.csv  matrix_KRWIIMGLNK.csv  matrix_LLWNGPMAV.csv  matrix_NLVPMVATV.csv  matrix_RAKFKQLL.csv  matrix_TFEYVSQPFLMDLE.csv  matrix_TPRVTGGGAM.csv  matrix_YLQPRTFLL.csv  matrix_YVLDHLIVV.csv
data/subs_epitope/TRA/: subs_AVFDRKSDAK.tsv  subs_ELAGIGILTV.tsv  subs_FLRGRAYGL.tsv  subs_FRDYVDRFYKTLRAEQASQE.tsv  subs_GILGFVFTL.tsv  subs_GLCTLVAML.tsv  subs_KLGGALQAK.tsv  subs_LLAGIGTVPI.tsv  subs_LLLGIGILV.tsv  subs_LLWNGPMAV.tsv  subs_NEGVKAAW.tsv  subs_NLVPMVATV.tsv  subs_RAKFKQLL.tsv  subs_TFEYVSQPFLMDLE.tsv  subs_TTDPSFLGRY.tsv  subs_YLQPRTFLL.tsv  subs_YVLDHLIVV.tsv
data/subs_epitope/TRB/: subs_ATDALMTGY.tsv  subs_CTELKLSDY.tsv  subs_ELAGIGILTV.tsv  subs_FLYALALLL.tsv  subs_FRDYVDRFYKTLRAEQASQE.tsv  subs_GILGFVFTL.tsv  subs_GLCTLVAML.tsv  subs_GTSGSPIVNR.tsv  subs_KAFSPEVIPMF.tsv  subs_KLGGALQAK.tsv  subs_KRWIILGLNK.tsv  subs_KRWIIMGLNK.tsv  subs_LLWNGPMAV.tsv  subs_NLVPMVATV.tsv  subs_RAKFKQLL.tsv  subs_TFEYVSQPFLMDLE.tsv  subs_TPRVTGGGAM.tsv  subs_YLQPRTFLL.tsv  subs_YVLDHLIVV.tsv
include/: CliConfig.h  MatchWriter.h  Record.h  RepertoireMatcher.h  Trie.h  TsvReader.h
main/: main.cpp
python/vdjmatch2/: __main__.py
src/: CliConfig.cpp  MatchWriter.cpp  RepertoireMatcher.cpp  Trie.cpp  TsvReader.cpp
tests/: run_tests.cpp
