[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "vdjmatch2"
version = "0.1.0"
description = "CLI tool for pairwise repertoire matching"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "antigenomics" }
]
keywords = ["tcr", "cdr3", "immunoinformatics", "cli"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Environment :: Console",
  "Operating System :: OS Independent"
]

[project.scripts]
vdjmatch2 = "vdjmatch2.__main__:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build.verbose = true
wheel.packages = ["python/vdjmatch2"]
install.components = ["python"]
cmake.version = ">=3.16"

[tool.scikit-build.sdist]
exclude = [
  ".git",
  ".idea",
  "build",
  "cmake-build-debug",
  "__MACOSX",
  "*.zip"
]
